# ThreatChecker-rust

./: Cargo.toml  README.md
src/: amsiscanner.rs  commands.rs  defenderscanner.rs  filehandler.rs  main.rs  yarascanner.rs
