[package]
name = "ThreatChecker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"]  }
colored = "2.1.0"
reqwest = { version = "0.12.4",features = ["blocking"]  }
yara-x = "0.5.0"
yara-x-parser = "0.5.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }

[dependencies.windows]
version = "0.58.0"
features = ["Win32_System_Antimalware",]
